Bug 341411 - Going Up breaks titlebar
Summary: Going Up breaks titlebar
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-29 18:10 UTC by Kai Uwe Broulik
Modified: 2014-12-01 12:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2014-11-29 18:10:47 UTC
[kde-baseapps frameworks]

When going up a to the previous folder (using a key or adding the toolbar button, not the back functionality!) breaks the title and tabbar. The titlebar only reads "/" and the tab (in case of multiple tabs) only "file". This even persists when navigating somewhere else and back, it will read "/" again for that particular folder.

Reproducible: Always

Steps to Reproduce:
1. Navigate into a subfolder
2. "Go up"
3. Observe title bar

Actual Results:  
Titlebar reads "/ - Dolphin"

Expected Results:  
Titlebar should read "nameOfParentFolder - Dolphin"
Comment 1 Arjun AK 2014-11-30 10:34:14 UTC
Patch to fix this: https://git.reviewboard.kde.org/r/121293/
Comment 2 Arjun AK 2014-12-01 12:09:37 UTC
Git commit ce73846ba818b8f4b9c8060bf8d86298464e1c2e by Arjun AK.
Committed on 01/12/2014 at 12:01.
Pushed by arjunak into branch 'frameworks'.

Fix KUrl -> QUrl porting error

Trailing slashes should be removed before calling QUrl::filename(),
else it will return an empty string.
REVIEW: 121293

M  +5    -1    dolphin/src/dolphinmainwindow.cpp
M  +1    -1    dolphin/src/dolphintabwidget.cpp

http://commits.kde.org/kde-baseapps/ce73846ba818b8f4b9c8060bf8d86298464e1c2e