Fix KUrl -> QUrl porting error

Trailing slashes should be removed before calling QUrl::filename(),
else it will return an empty string.

BUG: 341411
REVIEW: 121293